WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168233
[WebRTC] libwebrtc socket factory is not assigning the right socket type
https://bugs.webkit.org/show_bug.cgi?id=168233
Summary
[WebRTC] libwebrtc socket factory is not assigning the right socket type
youenn fablet
Reported
2017-02-13 10:08:02 PST
As spotted by Brent, libwebrtc socket factory is not assigning the right socket type.
Attachments
Patch
(2.63 KB, patch)
2017-02-13 10:09 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-02-13 10:09:06 PST
Created
attachment 301358
[details]
Patch
Brent Fulgham
Comment 2
2017-02-13 10:10:45 PST
Comment on
attachment 301358
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=301358&action=review
It seems like we should have some kind of test for these code paths; I only stumbled upon this by chance.
> Source/WebKit2/WebProcess/Network/webrtc/LibWebRTCSocketFactory.cpp:64 > + auto socket = std::make_unique<LibWebRTCSocket>(*this, ++s_uniqueSocketIdentifier, LibWebRTCSocket::Type::UDP, socketAddress, rtc::SocketAddress());
I approve this change! :-)
> Source/WebKit2/WebProcess/Network/webrtc/LibWebRTCSocketFactory.cpp:81 > + auto socket = std::make_unique<LibWebRTCSocket>(*this, ++s_uniqueSocketIdentifier, LibWebRTCSocket::Type::ClientTCP, localSocketAddress, remoteSocketAddress);
Hey! You caught one I missed! :-)
youenn fablet
Comment 3
2017-02-13 10:29:22 PST
(In reply to
comment #2
)
> Comment on
attachment 301358
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=301358&action=review
> > It seems like we should have some kind of test for these code paths; I only > stumbled upon this by chance.
I totally agree! I would like to test the whole code path: WebKit2 WebProcess creating webrtc sockets and calling NetworkProcess to do that. But then, the bots might not like that we do networking, although maybe 127.0.0.1 networking might work and be good enough for that purpose.
WebKit Commit Bot
Comment 4
2017-02-13 10:39:04 PST
Comment on
attachment 301358
[details]
Patch Clearing flags on attachment: 301358 Committed
r212232
: <
http://trac.webkit.org/changeset/212232
>
WebKit Commit Bot
Comment 5
2017-02-13 10:39:08 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug