[WebRTC] libwebrtc socket factory is not assigning the right socket type https://bugs.webkit.org/show_bug.cgi?id=168233

Patch by Youenn Fablet <youennf@gmail.com> on 2017-02-13
Reviewed by Brent Fulgham.

* WebProcess/Network/webrtc/LibWebRTCSocketFactory.cpp:
(WebKit::LibWebRTCSocketFactory::CreateUdpSocket):
(WebKit::LibWebRTCSocketFactory::CreateClientTcpSocket):

Canonical link: https://commits.webkit.org/185269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212232 268f45cc-cd09-0410-ab3c-d52691b4dbfc